Update title and header in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mrjo3000</title>
+  <title>Home</title>
 
   <style>
     :root {
@@ -87,7 +87,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Mrjo<span>3000</span></h1>
+    <h1>Jmo<span>_fr</span></h1>
     <p>Coder • Modder • Builder of random cool stuff</p>
 
     <div class="card">
@@ -102,8 +102,8 @@
       <h2>🔗 Links</h2>
       <div class="links">
         <a href="https://github.com/Mrjo3000" target="_blank">GitHub</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="https://github.com/mrjo3000?tab=repositories">Projects</a>
+        <a href="Jmosuxatlife@gmail.com">Contact</a>
       </div>
     </div>
 
