Update contact link to use proper URL format

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="links">
         <a href="https://github.com/Mrjo3000" target="_blank">GitHub</a>
         <a href="https://github.com/mrjo3000?tab=repositories">Projects</a>
-        <a href="Jmosuxatlife@gmail.com">Contact</a>
+        <a href="https://Jmosuxatlife@gmail.com">Contact</a>
       </div>
     </div>
 
