Add line break before footer in contact.html

--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
         <span class="material-icons">mail</span>
         Email Me
       </button>
-    </div>
+    </div> <br>
 
     <footer>
       © 2026 Mrjo3000 • GitHub Pages
