Clean up contact.html layout
Removed unnecessary line break and adjusted footer content.

--- a/contact.html
+++ b/contact.html
@@ -122,10 +122,10 @@
         <span class="material-icons">mail</span>
         Email Me
       </button>
-    </div> <br>
+    </div>
 
     <footer>
-      © 2026 Mrjo3000 • GitHub Pages
+      
     </footer>
   </div>
 
