Add new links to GitHub repositories

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
       <div class="links">
         <a href="https://github.com/Mrjo3000" target="_blank">GitHub</a>
         <a href="https://github.com/mrjo3000?tab=repositories">Projects</a>
+        <a href="https://github.com/mrjo3000/--Eaglercraft-Clients---">Eagler Clients</a>
+        <a href="https://github.com/notajmoaltformakingaserver/eaglercraft-1.21.5">Server Repo (1.21.5 | Void -- SMP)</a>
         <a href="contact">Contact</a>
       </div>
     </div>
