Enhance About section and add link
Updated the About section with line breaks and added an About link.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     <div class="card">
       <h2>👋 About</h2>
       <p>
-        I mess with code, Minecraft, mods, servers, and whatever sounds fun.
-        This site is my hub.
+        I mess with code, Minecraft, mods, servers, and whatever sounds fun.<br>
+        </br>This site is my hub.
       </p>
     </div>
 
@@ -126,6 +126,7 @@
         <a href="https://github.com/mrjo3000/--Eaglercraft-Clients---">Eagler Clients</a>
         <a href="https://github.com/notajmoaltformakingaserver/eaglercraft-1.21.5">Server Repo (1.21.5 | Void -- SMP)</a>
         <a href="contact">Contact</a>
+        <a href="about">About+</a>
       </div>
     </div>
 
